@@ -24,6 +24,7 @@ class RDDFunctions[T](rdd: RDD[T]) extends WritableToCassandra[T] with Serializa
                       writeConf: WriteConf = WriteConf.fromSparkConf(sparkContext.getConf))
                      (implicit connector: CassandraConnector = CassandraConnector(sparkContext.getConf),
                       rwf: RowWriterFactory[T]): Unit = {
+
     val writer = TableWriter(connector, keyspaceName, tableName, columns, writeConf)
     rdd.sparkContext.runJob(rdd, writer.write _)
   }
